# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1062 2013/02/21 16:43:28 ago Exp $

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gentoo-sources-3.7.9.ebuild:
  Stable for amd64, wrt bug #458602

*gentoo-sources-3.2.38 (19 Feb 2013)
*gentoo-sources-3.0.65 (19 Feb 2013)
*gentoo-sources-3.4.32 (19 Feb 2013)

  19 Feb 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.0.65.ebuild,
  +gentoo-sources-3.2.38.ebuild, +gentoo-sources-3.4.32.ebuild:
  Linux patches 3.0.63 to 3.0.65, 3.2.23 to 3.2.38 and 3.4.25 to 3.4.32. Removed
  2700_dual-channel-mode-vbios-check.patch for 3.4 since its changes are already
  present in the latest kernels of the 3.4 branch.

*gentoo-sources-3.7.9 (19 Feb 2013)

  19 Feb 2013; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.7.9.ebuild:
  Linux patch 3.7.9

*gentoo-sources-3.8.0 (19 Feb 2013)

  19 Feb 2013; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.8.0.ebuild:
  Patch to enable mic mute led in thinkpads. Patch for Zero copy for infiniband
  psm userspace driver. Patch to ensure that /dev/root doesn't appear in
  /proc/mounts when bootint without an initramfs. Bootsplash patch.

*gentoo-sources-3.7.8 (14 Feb 2013)

  14 Feb 2013; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.7.8.ebuild:
  Linux patch 3.7.8

  12 Feb 2013; Michael Pagano <mpagano@gentoo.org>
  gentoo-sources-3.0.17-r2.ebuild, gentoo-sources-3.0.35.ebuild,
  gentoo-sources-3.0.57.ebuild, gentoo-sources-3.4.9.ebuild,
  gentoo-sources-3.4.24.ebuild, gentoo-sources-3.5.7.ebuild:
  Fix copyright

*gentoo-sources-3.7.7 (12 Feb 2013)

  12 Feb 2013; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.7.7.ebuild:
  Linux patch 3.7.7.

*gentoo-sources-3.0.62 (08 Feb 2013)

  08 Feb 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.0.62.ebuild:
  Linux patches 3.0.58 - 3.0.62.
