@@ -73,7 +73,7 @@ EBUILD gentoo-sources-3.7.4.ebuild 859 SHA256 17ebd625ec2c07d414577afc42c84b3d2b
 EBUILD gentoo-sources-3.7.6.ebuild 859 SHA256 963fb780f8a91d69011325b92c1f16f0894a1218c0d22be4bd49815cfacb0dae SHA512 f05a28f31eac70b12fcb16ec932ccc56d97c562d679c33821bee1b99334623afd5d92c6116d3605cbc0a8ca4a7622fd3085619a0333e1272663848058221ab71 WHIRLPOOL c8a31763d8aae9bbfa3ef5f61829a27b5ea32fd9756951889e41edbb3fcf27957c51ebe65f062bc88bf736615b47b1d586101e270830cfbc0bb261ff473fe272
 EBUILD gentoo-sources-3.7.7.ebuild 859 SHA256 0f3d9db28bc43c35b9aa1dd6fb3f52a77baa931968fccb1abe0cec6f3fc44122 SHA512 be455e7f0a425d2344085f5ec5310839fec5337c96d97d2726b3539748bd0e75a502a056711907117e2f7f5fcdbb71ed56861523a9a56a6598bd61175d6bdb1c WHIRLPOOL c3c4a10deec614c378575834ae97423991e19e273e7c11ebe1de9e40e0a6ff542a166f925941b3ba0895003aa88081409326f87c159100fae85c4e4c52fd6bab
 EBUILD gentoo-sources-3.7.8.ebuild 860 SHA256 ef21c94d4912c90dc51575c0352b48e6030c35889fdaa0f7b02674f752e7d8b0 SHA512 219162992281f28f5b0058fff02fdb2e773f2ee89401b4c39807af811caa343125a18189f4e914d154128ad55d5ea9e035c9b94211e36fbb145edd2fe2cc7058 WHIRLPOOL 99ea2d097c0c91ff6468c4d449005d9c4f627ebb2695ae0b4782e20f34dcc997a4f36d2a847f792d8e8d6acb0d526f1c73a5eb9b9d4d8c860b03d88c74ad6350
-EBUILD gentoo-sources-3.7.9.ebuild 855 SHA256 132c58bff8156cfa0b007b9e780d1e788171b97b620c62ee56348ce8c67e269f SHA512 e14694ba1c1553efc0c0281ad848801e91dc2b06394ceabab91157c9271e5b34520e9f010c63c9f4be25bbad8201d051a08b16c922d2d3278162892e83877942 WHIRLPOOL efde4aaf910fe91efcc2584d7fc11cf21699dd9ca0f56676e974a468eddecf984365a5ca3326e922d66489924023ae14b7dc8d1ea6062dad2f866977b16d2624
+EBUILD gentoo-sources-3.7.9.ebuild 854 SHA256 b6bfeed63cea71f1c302e21f43eeccb53618b8501246bfe0f14bae2931ace6ae SHA512 3ead3593fb3c51b71772f6f5b3595a0ff9131a04b4ab5932d2982d9d52c7eaf618506fc016376421408a6f59ec5d5c5ec827322af63f4f04c5d55bf6016de2b3 WHIRLPOOL a07fb6d2c3e5ba687ac636a898a12d2aac1816fa00550ebe993dde6c6c6b0a8fac791ef522c095922d35fb798444da3323f2202234a573c598b019121864d7fc
 EBUILD gentoo-sources-3.8.0.ebuild 859 SHA256 39aba60af1f872004befc91c283eb9d431aa76f1022bbe044927c2711eba04be SHA512 ca5a3220a5a65ee63b510169d26123c86840e7837767b70ad0a02e23fe9dd4a60593a4c5733bc32f5b50a800ae36f6fd7be1d63db3145ff02ced9f48ba8b7bb9 WHIRLPOOL 7adeb194c39c4ecaed636fe5937033b0a7d6351053a1f9d1a68e09c111aa02101ea786f2e889e5622955f4bbb7ddd1f613d819cc73901ef22c99614dd6dc4ba9
-MISC ChangeLog 59140 SHA256 85e05d28c0adb7fb59b3ecfbddb0ef5671917501399e3fd26dc8f01600853231 SHA512 b81027caaefb63b2ed586d1698bb8452bb476ba8d1cd0e35a08d79d71891f74d1fcffd200a7061729cc911aaeabf4864b2c478a65bb2016949635315d0d531d7 WHIRLPOOL 24ab726a42cf7aa464c2c3d2ec258c0d6045977f92b3f17339b34cdad710a69401086af9c85a2fe240685c6e7fecb29bb5c95ae5f27e6f059345596a2fa018aa
+MISC ChangeLog 59253 SHA256 2a3a74c0fd9b23a0c5ec5ed84e18d1235e3342e8792e7a1ec31e3b945d3fff50 SHA512 3fc524e429f9a565074fa7d362e2478413212cdeb867d8b2c7d83f94e7f95e64662a90a8461a3dede3c8532a72bc1009d705af526105a6de3681f810fd91d0a1 WHIRLPOOL b5c069890e68adb7ae8c653d74e2e614511583f12ee2daf0e6415684b43bb75b9c89e5dc8bccedf95c807d82afd9904921b6859c52414bf18927579efb536459
 MISC metadata.xml 278 SHA256 2b556f98e8912903385bf20c7f6d0568be62196d2b12d31a7b2eec0d13781d34 SHA512 5ff7b398c4ada3bba50cdb5640e81b15c316487e5aa99b9802a15b7fb90270b5dd36aa5b415069124e722484b72c4ec789f66c3663acb413272b0d762a6d5001 WHIRLPOOL 958b0dd1701235c7a175c017ddf8c31467dab9de3f6aeb722473304c735055969b02868a678f27865038d12b4b93436457a1f1c40b9401123864b687c7bd23f7
