@@ -39,7 +39,7 @@ EBUILD vanilla-sources-3.4.32.ebuild 594 SHA256 76974ef7d049a22e2f844c2ebc425dbc
 EBUILD vanilla-sources-3.5.7.ebuild 582 SHA256 aeeab095a39df3d1128e25f6c1257860256d74b6c7ffff1e7b7128830a3a261a SHA512 42dc97ac6259d29b6cbf02ac645ad50d36fd787df2abf7e04220a27d0460eeda2543ed6eaf50d713314cf0cc23d9efafbc5d3a846a04f4718a13f3477d7c313f WHIRLPOOL b5cd38e3c5e15f5140dd9b15b69f950a742826096c5eee7267765661baeff5ca304adab44c4160604190a98fb868e2102cc728515dd9fc630034b57cce55e97d
 EBUILD vanilla-sources-3.6.11.ebuild 590 SHA256 8d273e9c7388eeb40c58d4a34dfdc46db5da8e55ed3764900f584126c0238248 SHA512 0a81783f01adb60a263ee8d5951bb27216f2bd656d8656ee312a3827bd416a40d40e2b93a8c93507910838a1b3900ab3cec4ef924d4e991764b0f9ad6423d0d2 WHIRLPOOL c9aaa87767b1fdbbba97a15d4486a6ed619c8ecfc9836b0888eb10162a1f449eeb867b15a2e4bc2a73a38758a12a0e573423f23f6ca8867ef756a737bcba6571
 EBUILD vanilla-sources-3.7.8.ebuild 589 SHA256 47d5cf63fec3ec1815281de3e7e24f168320fb097057f47d200b02c5884ba210 SHA512 9f8a12b3a6b33089567cecd00e1bd309fb1dd8cab90e4245ecb67ec430bbbde4973678912a89d208600f7063628180edd5edbca0eda9dc4e5ab8c4f449e21b4b WHIRLPOOL 380b6f454e24837ece75d60693909d4d69463bb34a5393796bdc6a4811ec9fb1e641d6ceb7a1a4fc09231ec835f18fced27c73ffeb52c54dbba6173e3456c006
-EBUILD vanilla-sources-3.7.9.ebuild 588 SHA256 be93e3183bc868bf5dec6ac6ffb1e7aefd42f097e833e49d1256f668fe960d69 SHA512 5882e165c738c985df309f77996527ffb69ae6b684b650c400c563d1e81365adbc725fad1b10efd2ed3a1d026ca8a5845b8933187d938fba2e3b99339049bb87 WHIRLPOOL f15504ea6c39e4d6955385e6ac36146d7c42453f5dd68d1819d0d22623a20bddb6ce0665ddfca3cee6b1c738a47f2acd94d7455fcd5d949076572f873a6717e0
+EBUILD vanilla-sources-3.7.9.ebuild 587 SHA256 c69d4a26b356e7375660b5b972013506392b0461ba69703e92f88128be38c0e9 SHA512 e1002c916297e941ce9c4401fe35916fdbb65d2b5ab736c89f9995ed59c24bacd71afaf3d790dbfcc7bd0838da9bb8d7f2a44a1e75028ca44364f9692f6bee85 WHIRLPOOL f990793aefa62d2e5b721abdc7b92a4856e7ff449bc5c7b02577f365752b34196c2acd9987311ff121033d87312a112d9977045bb51e09769f467b959b19a16f
 EBUILD vanilla-sources-3.8.0.ebuild 593 SHA256 4c04a3af7846f73297ff955628dff87bb671df0caf2dbe8d2b715ace121bb892 SHA512 4c6bba6ca307aac09f287863485bb4aca906d90945c7eb176451d4ca7ba7dc30fbcafe55abcf9e4f20769cd1f5bb84ab71f7dbc2ae5ae0996cb1f9369558c63b WHIRLPOOL 65b38baebb98a0945b4f80e14cd556f3dedea2ddf13335136f6c16254cbb92060e99eaf3c655cd9a0feec7638cc0ed8448346db99fe6cf457e40bdf922e996bf
-MISC ChangeLog 76283 SHA256 4542fad794e645a31eff7d92af81421f49562da7a0edd35c54d67d4b6e14c5f7 SHA512 8abb7cd517941bc547cfc1d16a05ccfd366a67363290dec25f3c1cd4d062e70e6ffb122f73a8e4e743dd89140a86714ed17679fc0e70a2e83d0c7ddeb184c3e3 WHIRLPOOL 93d41bfaae73e87bc8808e63d0e3c7a57b1d45728f741e2eb3c9358cd0b5e0bff30f583c6f539bc593c71edcd1a8336a22d80dacff0277c227d73829503882b8
+MISC ChangeLog 76397 SHA256 d348d916a0bc5e8bd7b3667f9329e8e7d9dfd4333eddb6bf49ed533ebaeda0d5 SHA512 bd9fa11779a3af6392bf4358cf233461aaaeb8b7de9a1ce1788074713c858c4ea721eb421d18185757fe4c98992332ab8523ce4aad6dd67fa8fd727b63362158 WHIRLPOOL 9d1923068574432e2e882952bf018e281eae0d40ee882aac3b2fc42efca26587d9fae2f9b800d4e4b6f6a611359d3a33544aa6fe273ab2e7f1aff2dcf6f500f5
 MISC metadata.xml 671 SHA256 4cc66bb08f286d43e3342dfee132b06e8778e78f7978099bbfe25350ab3a4b0a SHA512 14e3dcafa76242e0aa9e1cb0dd3abef896a257ad6cf2e8e31306f8aae159208936826e5cdc77981272f4fbfeeea8be97b9528ba3f3b4fd8da24dbe00e56f8f0a WHIRLPOOL db94ac9d12c4ec7b1daec1afa7e5925c5d873b54f4da6c1d068351c1ddaf40d8fec7a775b6fd8900e1fe6ada6d909ecb37a7b24ac923e3ab5d44e444bd9430ec
