@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1135 2013/02/21 16:43:48 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1136 2013/02/21 16:48:41 ago Exp $
+
+  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> vanilla-sources-3.7.9.ebuild:
+  Stable for x86, wrt bug #458602
 
   21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> vanilla-sources-3.7.9.ebuild:
   Stable for amd64, wrt bug #458602
